# claw-fun

./: .dockerignore  .env.example  .gitignore  .npmrc  DEPLOY.md  Dockerfile  docker-compose.yml  nixpacks.toml  package.json  railway.json  tsconfig.json  turbo.json
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/web/: .env.example  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/prisma/: schema.prisma
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/stats/: route.ts
apps/web/src/app/api/tokens/: route.ts
apps/web/src/app/api/tokens/[mint]/: route.ts
apps/web/src/app/api/tokens/[mint]/chart/: route.ts
apps/web/src/app/api/tokens/[mint]/trades/: route.ts
apps/web/src/app/api/users/[wallet]/: route.ts
apps/web/src/app/create/: page.tsx
apps/web/src/app/token/[mint]/: page.tsx
apps/web/src/components/: navbar.tsx  price-chart.tsx  providers.tsx  token-card.tsx  trade-history.tsx  trading-panel.tsx  vanity-miner.tsx
apps/web/src/components/ui/: button.tsx  card.tsx  input.tsx
apps/web/src/hooks/: use-solana.ts  use-tokens.ts  use-websocket.ts
apps/web/src/lib/: constants.ts  indexer.ts  redis.ts  utils.ts  websocket-server.ts
apps/web/src/workers/: vanity-miner.worker.ts
