[package]
name = "claw-miner"
version = "0.1.0"
edition = "2021"
description = "Mine Solana vanity addresses ending in 'claw'"
authors = ["CLAW.FUN Team"]
license = "MIT"

[[bin]]
name = "claw-miner"
path = "src/main.rs"

[dependencies]
solana-sdk = "1.18"
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5"
num_cpus = "1.16"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
